[package]
name = "marvin2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
libsums = { git = "https://github.com/HackSocNotts/libsums.git", version = "0.5.0" }
log = "0.4.22"
poise = "0.5.6"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
